--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,12 @@ management:
       exposure:
         include:
           - "*"
+  info:
+    env:
+      enabled: true
+info:
+  application:
+    name: custom-actuator
+    Description: Spring Boot Actuator 2.x Enhancement
+    artifact: custom-actuator
+    version: 0.0.1-SNAPSHOT
